# dio-python-fastapi

./: main.py  pyproject.toml  query_parameter.py
